syntax = "proto2";
package decoder;


import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option (gogoproto.gostring_all) = true;
option (gogoproto.goproto_stringer_all) = false;
option (gogoproto.stringer_all) =  true;
option (gogoproto.marshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.unmarshaler_all) = true;

// For tests
//option (gogoproto.testgen_all) = true;
option (gogoproto.benchgen_all) = true;
option (gogoproto.equal_all) = true;
option (gogoproto.populate_all) = true;

// HEP represents HEP packet
message HEP {
	required uint32 IPVersion = 1 [(gogoproto.nullable) = false];
	required uint32 TransportProto = 2 [(gogoproto.nullable) = false];
	required string SourceIP = 3 [(gogoproto.nullable) = false];
	required string DestIP = 4 [(gogoproto.nullable) = false];
	required uint32 SourcePort = 5 [(gogoproto.nullable) = false];
	required uint32 DestPort = 6 [(gogoproto.nullable) = false];
	required uint32 TimeSec = 7 [(gogoproto.nullable) = false];
	required uint32 TimeMicrosec = 8 [(gogoproto.nullable) = false];
	required uint32 AppProto = 9 [(gogoproto.nullable) = false];
	required uint32 NodeID = 10 [(gogoproto.nullable) = false];
	required string NodePW = 11 [(gogoproto.nullable) = false];
	required string Payload = 12 [(gogoproto.nullable) = false];
	required string CorrelationID = 13 [(gogoproto.nullable) = false];
	required uint32 Vlan = 14 [(gogoproto.nullable) = false];
}



// curl -OL https://github.com/google/protobuf/releases/download/v3.6.1/protoc-3.6.1-linux-x86_64.zip
// unzip protoc-3.6.1-linux-x86_64.zip -d protoc3
// sudo mv protoc3/bin/* /usr/local/bin/
// sudo mv protoc3/include/* /usr/local/include/
// go get github.com/gogo/protobuf/protoc-gen-gogoslick
// go get github.com/gogo/protobuf/protoc-gen-gogofaster
// protoc -I=. -I=$GOPATH/src -I=$GOPATH/src/github.com/gogo/protobuf/protobuf --gogoslick_out=. hep.proto
// protoc -I=. -I=$GOPATH/src -I=$GOPATH/src/github.com/gogo/protobuf/protobuf --gogofaster_out=. hep.proto